fixing annotations issues by"’activer le traitement des annotations Lombok""